<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login</string>
    <string name="msg_btRegister">Boton para registarse</string>
    <string name="msg_fallo_registro">Fallo el registro del usuario</string>
    <string name="msg_fallo_login">Fallo el login del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_carro">Carro</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="msg_modelo_add">Modelo del carro</string>
    <string name="msg_año_add">Año del carro</string>
    <string name="msg_marca_add">Marca del carro</string>
    <string name="msg_motor_add">Motor del carro</string>
    <string name="msg_precio_add">Precio del carro</string>
    <string name="msg_cantidadAsientos_add">Cantidad de asientos del carro</string>
    <string name="msg_tipoCaja_add">Tipo de caja de cambios del carro</string>
    <string name="msg_correo_add">Correo del propietario</string>
    <string name="msg_telefono_add">Telefono del propietario</string>
    <string name="msg_web_add">Sitio web del propietario</string>

    <string name="msg_carro_add">Carro Agregado</string>
    <string name="msg_carro_update">Carro Actualizado</string>
    <string name="msg_carro_delete">Carro Eliminado</string>


    <string name="bt_add_carro">Agregar Carro</string>
    <string name="bt_update_carro">Actualizar Carro</string>
    <string name="menu_delete">Eliminar Carro</string>
    <string name="msg_seguroBorrar">¿Está seguro de eliminar </string>
    <string name="no">No</string>
    <string name="si">Si</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_saludos">Saludos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>

    <string name="msg_imagen">Imagen del carro</string>
    <string name="msg_take_photo">Toma foto</string>
    <string name="msg_rotate_l">Rota izquierda</string>
    <string name="msg_rotale_r">Rota a la derecha</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="todo">para que no de error</string>

    <string name="msg_google">Login con Google</string>
    <string name="id_web">491409476404-v0ut2bu0h6ro94604ol9sk934demrjg3.apps.googleusercontent.com</string>
</resources>